add new graphics and fix an issue

--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -259,7 +259,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: #872927
+  background: #872927;
   transition: 0.3s;
   z-index: 999;
 }
@@ -380,7 +380,7 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #d9251c;
+  background: rgba(255, 255, 255, 0.6);
 }
 
 #hero .btn-watch-video {
