manually combine them :(

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -43,14 +43,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto"><a href="index.html">TTC Safety</a></h1>
-      <a href="index.html" class="logo me-auto"><img src="{{ url_for('static', filename='img/TTC-LOGO.png') }}" alt="" class="img-fluid"></a>
-
+      <a href="https://www.ttc.ca/" class="logo me-auto"><img src="{{ url_for('static', filename='img/TTC-LOGO.png') }}" alt="" class="img-fluid"></a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">TTC Safety</a></li>
-          <li><a class="nav-link scrollto" href="https://www.ttc.ca/">TTC Website</a></li>
+          <li> <h1 class="logo me-auto"><a>TTC Safety</a></h1></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -67,11 +63,11 @@
           <h2>Subtitle here</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://ttc.ca/'" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Start Recording</span></a>
+            <a href="https://ttc.ca/'" class="glightbox btn-watch-video"><i class="bi bi-mic"></i><span>Start Recording</span></a>
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 placeholder" data-aos="zoom-in" data-aos-delay="200">
-          <img src="{{ url_for('static',filename='img/placeholder.png') }}" class="img-fluid animated" alt="">
+        <div class="col-lg-6 order-1 order-lg-2 chart_green_1" data-aos="zoom-in" data-aos-delay="200">
+          <img src="{{ url_for('static',filename='img/chart_green_1.png') }}" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
