emergency sms button works now

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -43,8 +43,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
-      <a href="https://www.ttc.ca/" class="logo me-auto"><img src="{{ url_for('static', filename='img/TTC-LOGO.png') }}" alt="" class="img-fluid"></a>
-      <nav id="navbar" class="navbar">
+      <a href="https://www.ttc.ca/" class="logo me-auto"><img src="{{ url_for('static', filename='img/TTC-LOGO.png') }}" alt="" class="img-fluid"></a>      <nav id="navbar" class="navbar">
         <ul>
           <li> <h1 class="logo me-auto"><a>TTC Safety</a></h1></li>
         </ul>
@@ -59,8 +58,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Welcome to TTC Safety</h1>
-          <h2>Subtitle here</h2>
+          <h1>Welcome to TTC Safety!</h1>
+          <h2>Your personal security guard</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <button id="emergencyButton" class="btn-get-started scrollto">Emergency1</button>
             <a href="https://ttc.ca/'" class="glightbox btn-watch-video"><i class="bi bi-mic"></i><span>Start Recording</span></a>
