impleemented sockets using flask library

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -48,7 +48,7 @@
         <ul>
           <li> <h1 class="logo me-auto"><a>TTC Safety</a></h1></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <button id = "record-button" class="bi bi-list mobile-nav-toggle"></button>
       </nav><!-- .navbar -->
 
     </div>
