--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -61,7 +61,7 @@
           <h1>Welcome to TTC Safety!</h1>
           <h2>Your personal security guard</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <button id="emergencyButton" class="btn-get-started scrollto">Emergency1</button>
+            <button id="emergencyButton" class="btn-get-started scrollto">Emergency SMS</button>
             <a href="https://ttc.ca/'" class="glightbox btn-watch-video"><i class="bi bi-mic"></i><span>Start Recording</span></a>
           </div>
         </div>
