Change about button to emergency call button

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -61,7 +61,7 @@
           <h1>Welcome to TTC Safety</h1>
           <h2>Subtitle here</h2>
           <div style="position: relative; opacity:1" class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <button id="emergencyButton" class="btn-get-started scrollto">Emergency SMS</button>
             <div onclick = "startRecording()" id = "record-button" class="glightbox btn-watch-video"><i class="bi bi-mic"></i><span>Start Recording</span></div>
           </div>
         </div>
